--- a/github.html
+++ b/github.html
@@ -31,30 +31,28 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer row">
-                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
                                 <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
                             </li>
-                            <li class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fab fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
-                            <li class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-download menuitem">
                                 <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
                 </div>
-
             </div>
-        </div>
     </header>
     <section class="container-fluid">
         <div class="row bg-color-contact">
@@ -63,7 +61,7 @@
                 <h5 class="uppercase text-center">You can also search on other user profiles</h5>
 
                 <div class="center-form">
-                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                    <input type="text" id="gh-username" value="octocat" oninput="fetchGithubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
 
